# OtusSecondTask

./: .gitignore  .travis.yml  CMakeLists.txt  main.cpp  test.cpp
